--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -1,13 +1,37 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>{{ title } }}</title>
+
+	<!-- https://github.com/joshbuchea/HEAD -->
+
+	<!-- Recommended -->
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta content="ie=edge" http-equiv="x-ua-compatible">
+	<!-- Elements -->
+	<meta charset="utf-8">
+
+	<!-- Meta -->
+	<meta name="description" content="{{ metadata.description }}">
+	<meta name="generator" content="11ty">
+
+	<!-- Icons -->
+	<!-- https://favicon.io/ -->
+	<link rel="apple-touch-icon" sizes="180x180" href="{{ '/apple-touch-icon.png' | url }}">
+	<link rel="icon" type="image/png" sizes="32x32" href="{{ '/favicon-32x32.png' | url }}">
+	<link rel="icon" type="image/png" sizes="16x16" href="{{ '/favicon-16x16.png' | url }}">
+	<link rel="manifest" href="{{ '/site.webmanifest' | url }}">
+	<title>{{ title or metadata.title }}</title>
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700;800&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="{{ '/index.css' | url }}">
+	<link rel="stylesheet" href="{{ '/custom-styles.css' | url }}">
 </head>
-<body>
+
+<body class="font-inter">
+
+{{ content | safe }}
 
 </body>
 </html>
