feat: before deleting dropdown

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,3 +1,57 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+	body {
+		font-family: Inter, sans-serif;
+	}
+}
+
+@layer components {
+	.btn {
+		@apply transition text-center;
+	}
+
+	.flex-center-xy {
+		@apply flex items-center justify-center;
+	}
+	.btn-light {
+		@apply bg-primary/10 text-primary hover:text-white hover:bg-primary;
+	}
+
+	.btn-dark {
+		@apply bg-primary text-white hover:text-primary hover:bg-primary/10;
+	}
+
+	.btn-normal {
+		@apply py-2 px-2.5 lg:py-3 lg:px-5 rounded-md text-xs lg:text-sm font-medium leading-none;
+	}
+
+	.btn-bigger {
+		@apply py-3 px-4 lg:py-3 lg:px-8 rounded-md text-sm lg:text-base font-medium leading-none;
+	}
+
+	.btn-outlined {
+		@apply border;
+	}
+
+	.btn-outlined-dark {
+		@apply text-kdark-darkGrey border-kdark-darkGrey hover:text-primary-lighter hover:border-primary-lighter;
+	}
+	.btn-outlined-primary-lighter {
+		@apply border-primary-lighter text-primary-lighter hover:border-primary hover:text-primary;
+	}
+
+	.page-header__link {
+		@apply text-kdark-black transition hover:text-primary;
+	}
+
+	.nav-link {
+		@apply px-4 py-3.5 block transition hover:bg-primary-lighter/10 hover:text-primary text-sm;
+	}
+
+	.section-title {
+		@apply xl:text-5xl font-extrabold xl:mb-5 text-2xl  mb-3;
+	}
+}
