--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -10,17 +10,16 @@
 	<meta content="ie=edge" http-equiv="x-ua-compatible">
 	<!-- Elements -->
 	<meta charset="utf-8">
-
 	<!-- Meta -->
 	<meta name="description" content="{{ metadata.description }}">
 	<meta name="generator" content="11ty">
 
 	<!-- Icons -->
 	<!-- https://favicon.io/ -->
-	<link rel="apple-touch-icon" sizes="180x180" href="{{ '/apple-touch-icon.png' | url }}">
-	<link rel="icon" type="image/png" sizes="32x32" href="{{ '/favicon-32x32.png' | url }}">
-	<link rel="icon" type="image/png" sizes="16x16" href="{{ '/favicon-16x16.png' | url }}">
-	<link rel="manifest" href="{{ '/site.webmanifest' | url }}">
+	<link rel="apple-touch-icon" sizes="180x180" href="{{ 'assets/apple-touch-icon.png' | url }}">
+	<link rel="icon" type="image/png" sizes="32x32" href="{{ 'assets/favicon-32x32.png' | url }}">
+	<link rel="icon" type="image/png" sizes="16x16" href="{{ 'assets/favicon-16x16.png' | url }}">
+	<link rel="manifest" href="{{ 'assets/site.webmanifest' | url }}">
 	<title>{{ title or metadata.title }}</title>
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -29,9 +28,12 @@
 	<link rel="stylesheet" href="{{ '/custom-styles.css' | url }}">
 </head>
 
-<body class="font-inter">
 
-{{ content | safe }}
-
+<body class="font-inter ">
+	<div class="outer-wrapper grid">
+		{% include '../header.njk' %}
+		{{ content | safe }}
+		{% include '../footer.njk' %}
+	</div>
 </body>
 </html>
