feat: implement main page | not fully

--- a/src/_includes/header.njk
+++ b/src/_includes/header.njk
@@ -29,34 +29,34 @@
                         p-4 xl:p-0 rounded-xl border opacity-0  pointer-events-none xl:opacity-100  xl:border-0
                         xl:pointer-events-auto translate-y-4 xl:translate-y-0 xl:w-auto">
 			<ul class="page-header__nav-list list-none m-0 p0 xl:flex xl:gap-x-8 items-center ">
-				<li class="relative mb-2 xl:m-0  page-header__nav-item page-header__nav-item_has-menu"><a
-						class="page-header__link flex items-center " href="#">
-						<span>Feature</span>
-						<svg class="ml-2 transition" width="12" height="6" fill="currentColor"
-								 xmlns="http://www.w3.org/2000/svg">
-							<path fill-rule="evenodd" clip-rule="evenodd"
-										d="M.97.22a.75.75 0 0 1 1.06 0L6 4.19 9.97.22a.75.75 0 1 1 1.06 1.06l-4.5 4.5a.75.75 0 0 1-1.06 0l-4.5-4.5a.75.75 0 0 1 0-1.06Z"
-										fill="currentColor"/>
-						</svg>
-					</a>
-					<div class="page-header__dropdown z-10 rounded-xl bg-white w-64
-                    drop-shadow-xl absolute
-                      opacity-0 top-8 border translate-y-4 pointer-events-none">
-						<ul class="list-none">
-							{% for navFeat in navFeatures %}
-							<li>
-								<a href="/feature/{{ navFeat.name | slug }}" class="nav-link">{{ navFeat.name  }}</a>
-							</li>
-							{% endfor %}
-							<li class="px-5 pb-4 mt-2">
-								<a href="#"
-									 class="block btn btn-outlined btn-normal btn-outlined-primary-lighter">
-									See all features
-								</a>
-							</li>
-						</ul>
-					</div>
-				</li>
+{#				<li class="relative mb-2 xl:m-0  page-header__nav-item page-header__nav-item_has-menu"><a#}
+{#						class="page-header__link flex items-center " href="#">#}
+{#						<span>Feature</span>#}
+{#						<svg class="ml-2 transition" width="12" height="6" fill="currentColor"#}
+{#								 xmlns="http://www.w3.org/2000/svg">#}
+{#							<path fill-rule="evenodd" clip-rule="evenodd"#}
+{#										d="M.97.22a.75.75 0 0 1 1.06 0L6 4.19 9.97.22a.75.75 0 1 1 1.06 1.06l-4.5 4.5a.75.75 0 0 1-1.06 0l-4.5-4.5a.75.75 0 0 1 0-1.06Z"#}
+{#										fill="currentColor"/>#}
+{#						</svg>#}
+{#					</a>#}
+{#					<div class="page-header__dropdown z-10 rounded-xl bg-white w-64#}
+{#                    drop-shadow-xl absolute#}
+{#                      opacity-0 top-8 border translate-y-4 pointer-events-none">#}
+{#						<ul class="list-none">#}
+{#							{% for navFeat in navFeatures %}#}
+{#							<li>#}
+{#								<a href="/feature/{{ navFeat.name | slug }}" class="nav-link">{{ navFeat.name  }}</a>#}
+{#							</li>#}
+{#							{% endfor %}#}
+{#							<li class="px-5 pb-4 mt-2">#}
+{#								<a href="#"#}
+{#									 class="block btn btn-outlined btn-normal btn-outlined-primary-lighter">#}
+{#									See all features#}
+{#								</a>#}
+{#							</li>#}
+{#						</ul>#}
+{#					</div>#}
+{#				</li>#}
 				{% for nav in navigation %}
 					<li class="mb-2 xl:m-0"><a class="page-header__link" href="{{ nav.link }}">{{ nav.title }}</a></li>
 				{% endfor %}
