--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -30,10 +30,11 @@
 
 
 <body class="font-inter ">
-	<div class="outer-wrapper grid">
+	<div class="outer-wrapper xl:grid">
 		{% include '../header.njk' %}
 		{{ content | safe }}
 		{% include '../footer.njk' %}
 	</div>
+	<script src="{{ 'assets/js/main.js' }}"></script>
 </body>
 </html>
