fix: restore files paths

--- a/src/_includes/footer.njk
+++ b/src/_includes/footer.njk
@@ -26,10 +26,10 @@
 			<div class="column-title text-lg mb-4 font-medium text-grey-light">Get the App</div>
 			<div class="app-download-col  ">
 				<a href="#" class="footer-app block w-32 h-10 mb-4 transition hover:scale-105">
-					<img src="assets/img/badge-app-store.png" alt="">
+					<img src="{{ settings.siteRoot }}/assets/img/badge-app-store.png" alt="">
 				</a>
 				<a href="#" class="footer-app block w-32 h-10 transition hover:scale-105">
-					<img src="assets/img/badge-play-market.png" alt="">
+					<img src="{{ settings.siteRoot }}/assets/img/badge-play-market.png" alt="">
 				</a>
 			</div>
 		</div>
