--- a/src/_includes/header.njk
+++ b/src/_includes/header.njk
@@ -20,7 +20,7 @@
 			</button>
 			<div class="page-header__logo xl:mr-8">
 				<a href="/" class="block">
-					<img src="assets/img/logo-kennekt.svg" alt="Kennekt logo"/>
+					<img src="{{ settings.siteRoot }}/assets/img/logo-kennekt.svg" alt="Kennekt logo"/>
 				</a>
 			</div>
 		</div>
