--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -24,8 +24,8 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700;800&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="{{ 'index.css' | url }}">
-	<link rel="stylesheet" href="{{ 'custom-styles.css' | url }}">
+	<link rel="stylesheet" href="{{ '/index.css' | url }}">
+	<link rel="stylesheet" href="{{ '/custom-styles.css' | url }}">
 </head>
 
 
