--- a/src/styles/custom-styles.css
+++ b/src/styles/custom-styles.css
@@ -143,7 +143,7 @@ body {
 	display: none;
 }
 
-.feature .features__list.reveal .features__item:nth-child(4) ~ .features__item {
+.features__list.reveal .features__item:nth-child(4) ~ .features__item {
 	display: block;
 }
 
