fix: fix image path to provide 2x images

--- a/src/_includes/features.html
+++ b/src/_includes/features.html
@@ -21,7 +21,7 @@
 						<picture>
 							<img
 								class="h-full object-contain"
-								src="assets/pics/{{feature.pic}}.png"
+								src="assets/pics/{{feature.pic}}-2x.png"
 								srcset="
 									assets/pics/{{feature.pic}}-2x.png 2x,
 									assets/pics/{{feature.pic}}.png    1x
