tweaks: implement Asilbeks tweaks

--- a/src/_includes/footer.njk
+++ b/src/_includes/footer.njk
@@ -1,23 +1,20 @@
 <footer class="page-footer py-8 px-3 xl:pt-24 xl:pb-32  xl:px-0">
 	<div class="page-footer__inner xl:max-w-[1100px] mx-auto xl:flex justify-between text-white">
 		<div class="page-footer__left">
-			<div class="page-footer__logo mb-6">
+			<a class="page-footer__logo mb-6 block" href="/">
 				<img src="assets/img/logo-kennekt-dark.svg" alt="">
-			</div>
+			</a>
 			<div class="page-footer__links mb-3">
 				<div class="flex">
 					<a href="#" class="page-footer__link text-base block mr-6 transition hover:text-primary-lighter">Download Now</a>
-					<a href="#" class="page-footer__link">License</a>
+					<a href="#" class="page-footer__link text-base block mr-6 transition hover:text-primary-lighter">License</a>
 				</div>
 			</div>
 			<div class="page-footer__links mb-6">
 				<div class="flex flex-wrap">
-					<a href="#" class="page-footer__link  text-base block mr-6 transition hover:text-primary-lighter">About</a>
-					<a href="#" class="page-footer__link  text-base block mr-6 transition hover:text-primary-lighter">Features</a>
-					<a href="#" class="page-footer__link  text-base block mr-6 transition hover:text-primary-lighter">Pricing</a>
-					<a href="#" class="page-footer__link  text-base block mr-6 transition hover:text-primary-lighter">Careers</a>
-					<a href="#" class="page-footer__link  text-base block mr-6 transition hover:text-primary-lighter">Help</a>
-					<a href="#" class="page-footer__link">Privacy Policy</a>
+					<a href="/" class="page-footer__link  text-base block mr-6 transition hover:text-primary-lighter">Home</a>
+					<a href="/pages/about" class="page-footer__link  text-base block mr-6 transition hover:text-primary-lighter">About</a>
+					<a href="/pages/contact" class="page-footer__link  text-base block mr-6 transition hover:text-primary-lighter">Contact</a>
 				</div>
 			</div>
 			<div class="page-footer__copyright text-grey-light text-sm">© 2021 Kennekt. All rights reserved</div>
