--- a/src/_includes/header.njk
+++ b/src/_includes/header.njk
@@ -63,13 +63,13 @@
 			</ul>
 		</div>
 		<div class="page-header__btns flex items-center ml-auto">
-			<a href="#" class="block btn btn-light btn-normal mr-2 xl:mr-3.5">
+			<a href="https://client.kennekt.com/" class="block btn btn-light btn-normal ">
 				Login
 			</a>
-			<a href="#" class="block btn btn-dark btn-normal">
-				<span class="whitespace-nowrap">Try it</span>
-				<span class="hidden xl:inline">for free</span>
-			</a>
+{#			<a href="#" class="block btn btn-dark btn-normal ml-2 xl:ml-3.5">#}
+{#				<span class="whitespace-nowrap">Try it</span>#}
+{#				<span class="hidden xl:inline">for free</span>#}
+{#			</a>#}
 
 		</div>
 	</div>
