--- a/src/styles/custom-styles.css
+++ b/src/styles/custom-styles.css
@@ -159,6 +159,11 @@ body {
 	width: 100%;
 }
 
+.contact-us__form-wrapper {
+	grid-template-columns: 400px 1fr;
+	grid-column-gap: 70px;
+}
+
 .upcoming {
 	background-image: url("assets/img/bg-oval-left.png"),
 		url("assets/img/bg-particles-3x.png"),
@@ -215,6 +220,10 @@ body {
 
 	.features__descr {
 		width: auto;
+	}
+
+	.contact-us__form-wrapper {
+		grid-template-columns: 1fr;
 	}
 
 	.upcoming__features-wrapper {
