--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -54,4 +54,12 @@
 	.section-title {
 		@apply xl:text-5xl font-extrabold xl:mb-5 text-2xl  mb-3;
 	}
+
+	.contact-input {
+		@apply bg-grey-f5f5f5 rounded-xl py-3 placeholder-transparent outline-none w-full block px-3 focus:ring-2 transition focus:ring-primary;
+	}
+
+	.contact-input-label {
+		@apply absolute left-2 -top-6 text-sm text-kdark transition-all;
+	}
 }
