--- a/src/_includes/contact-us.njk
+++ b/src/_includes/contact-us.njk
@@ -1,15 +1,15 @@
 <div class="contact-us bg-primary-lighter/10">
-	<div class="contact-us__inner xl:max-w-[1100px] mx-auto px-3 xl:px-0 xl:pt-24 xl:pb-36">
-		<div class="contact-us__header mb-12">
+	<div class="contact-us__inner xl:max-w-[1100px] mx-auto px-3 pt-10 pb-10 xl:px-0 xl:pt-24 xl:pb-36">
+		<div class="contact-us__header mb-8 xl:mb-12">
 
 			<div class="section-title text-center ">
 				Contact Us
 			</div>
-			<p class="text-center text-xl font-medium">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mi,
+			<p class="text-center text-base xl:text-xl font-medium">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mi,
 				tincidunt ac pharetra quis cum id.</p>
 		</div>
 		<div class="contact-us__form-wrapper max-w-[804px] grid mx-auto content-center">
-			<div class="contact-us__form bg-white border border-grey-ddd rounded-2xl drop-shadow-xl py-10 px-6">
+			<div class="contact-us__form mb-8 xl:mb-0 bg-white border border-grey-ddd rounded-2xl drop-shadow-xl py-10 px-6">
 				<h4 class="font-bold text-xl mb-8 text-center">Contact Us</h4>
 				<form action="">
 					{% for field in contactFields %}
@@ -38,21 +38,21 @@
 				</form>
 			</div>
 			<div class="contact-us__info flex justify-center flex-col">
-				<div class="contact-us__type mb-16">
+				<div class="contact-us__type flex justify-center flex-col mb-16">
 					{% for ctype in  contactTypes %}
 						<div class="contact-type flex items-center mb-4 last:mb-0">
 							<div class="contact-type__icon shrink-0">
 								<img src="{{ settings.siteRoot }}/assets/img/{{ ctype.icon }}" alt="">
 							</div>
-							<div class="contact-type__text ml-5 font-bold text-xl">
+							<div class="contact-type__text ml-5 font-bold text-base xl:text-xl">
 								{{ ctype.text }}
 							</div>
 						</div>
 					{% endfor %}
 				</div>
-				<div class="contact-us__links flex items-center">
+				<div class="contact-us__links flex items-center justify-center">
 					{% for link in  contactLinks %}
-						<a class="contact-type flex items-center mr-8 text-primary
+						<a class="contact-type flex  items-center mr-8 text-primary
 						 last:mr-0 hover:text-primary-lighter transition" href="{{ link.link }}" title="{{ link.title }}">
 							{{ link.svg }}
 						</a>
