feat: add about page

--- a/src/_includes/features.html
+++ b/src/_includes/features.html
@@ -16,7 +16,7 @@
 		<div class="features__list">
 			{% for feature in features %}
 			<div class="features__item">
-				<div class="feature h-full grid">
+				<div class="feature h-full xl:grid">
 					<div class="features__image flex h-full">
 						<picture>
 							<img
