--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -16,10 +16,10 @@
 
 	<!-- Icons -->
 	<!-- https://favicon.io/ -->
-	<link rel="apple-touch-icon" sizes="180x180" href="{{ 'assets/apple-touch-icon.png' | url }}">
-	<link rel="icon" type="image/png" sizes="32x32" href="{{ 'assets/favicon-32x32.png' | url }}">
-	<link rel="icon" type="image/png" sizes="16x16" href="{{ 'assets/favicon-16x16.png' | url }}">
-	<link rel="manifest" href="{{ 'assets/site.webmanifest' | url }}">
+	<link rel="apple-touch-icon" sizes="180x180" href="{{ '/assets/apple-touch-icon.png' | url }}">
+	<link rel="icon" type="image/png" sizes="32x32" href="{{ '/assets/favicon-32x32.png' | url }}">
+	<link rel="icon" type="image/png" sizes="16x16" href="{{ '/assets/favicon-16x16.png' | url }}">
+	<link rel="manifest" href="{{ '/assets/site.webmanifest' | url }}">
 	<title>{{ title or metadata.title }}</title>
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -35,6 +35,6 @@
 		{{ content | safe }}
 		{% include '../footer.njk' %}
 	</div>
-	<script src="{{ 'assets/js/main.js' }}"></script>
+	<script src="{{ '/assets/js/main.js' }}"></script>
 </body>
 </html>
