--- a/src/_includes/work-anywhere.html
+++ b/src/_includes/work-anywhere.html
@@ -15,7 +15,8 @@
 			<div class="device__list xl:flex-center-xy xl:gap-x-7">
 				<div class="device__item mb-4 xl:mb-0">
 					<a
-						href="#"
+						target="_blank"
+						href="https://apps.apple.com/us/app/kennekt-business-messenger/id1570637878"
 						class="app-link block rounded border border-2 border-grey-light pl-6 pr-8 pt-2 pb-3 flex items-center group hover:border-primary transition hover:bg-primary"
 					>
 						<div
@@ -53,7 +54,8 @@
 				</div>
 				<div class="device__item mb-4 xl:mb-0">
 					<a
-						href="#"
+						target="_blank"
+						href="https://play.google.com/store/apps/details?id=com.kennekt.businessmobile"
 						class="app-link block rounded border border-2 border-grey-light pl-6 pr-8 pt-2 pb-3 flex items-center group hover:border-primary transition hover:bg-primary"
 					>
 						<div
